# statistics-app

./: CMakeLists.txt  README.md
app/: main.cpp
include/statistics-app/: menu-utils.hpp  statistics-lib.hpp
src/: statistics-app.cpp  statistics-lib.cpp
tests/: statistics-test.cpp  statistics-tests.cpp
